apps/adrianna/04_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  labels:
    app.kubernetes.io/name: ghost
    app.kubernetes.io/version: 3.37.1
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: argocd
  namespace: adrianna
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ghost
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ghost
        app.kubernetes.io/version: 3.37.1
        app.kubernetes.io/component: server
        app.kubernetes.io/managed-by: argocd
    spec:
      containers:
      - name: ghost
        image: ghost:3.37.1
        ports:
          - name: http
            containerPort: 2368
        livenessProbe:
          tcpSocket:
            port: 2368
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 5
        volumeMounts:
          - mountPath: /var/lib/ghost/content
            name: content
          - mountPath: /var/lib/ghost/content/logs
            name: logs
        resources:
          requests:
            memory: 120M
      volumes:
        - name: content
          persistentVolumeClaim:
            claimName: data
        - name: logs
          emptyDir: {}
